--- a/assets/scss/content/images.scss
+++ b/assets/scss/content/images.scss
@@ -13,7 +13,7 @@
   @include min {
     height: auto;
     width: 100%;
-    margin: rem(48) 0 0 0;
+    margin-bottom: rem(48);
   }
 }
 
